[package]
name = "libp2p-community-tor"
version = "0.4.0"
edition = "2021"
license = "MIT"
resolver = "2"
description = "Tor transport for libp2p."
repository = "https://github.com/umgefahren/libp2p-tor"
authors = ["umgefahren <hannes@umgefahren.xyz>"]

[dependencies]
arti-client = "0.24.0"
futures = "0.3"
libp2p = { version = "^0.53", default-features = false, features = ["tokio", "tcp", "tls"] }
tor-rtcompat = { version = "0.24.0", features = ["tokio", "rustls"] }
tokio = { version = "1.0", features = ["macros"] }
tracing = "0.1.40"

[dev-dependencies]
libp2p = { version = "0.53", default-features = false, features = ["tokio", "noise", "yamux", "ping", "noise", "macros", "tcp", "tls"] }
tokio-test = "0.4.4"

[[example]]
name = "ping-onion"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
