[package]
name = "libp2p-community-tor"
version = "0.5.0"
edition = "2021"
license = "MIT"
resolver = "2"
description = "Tor transport for libp2p."
repository = "https://github.com/umgefahren/libp2p-tor"
authors = ["umgefahren <hannes@umgefahren.xyz>"]

[dependencies]
thiserror = "2.0"
anyhow = "1.0.93"
tokio = "1.41.1"
futures = "0.3"

arti-client = { version = "^0.25", default-features = false, features = ["tokio", "rustls", "onion-service-client", "static-sqlite"] }
libp2p = { version = "^0.53", default-features = false, features = ["tokio", "tcp", "tls"] }

tor-rtcompat = { version = "^0.25", features = ["tokio", "rustls"] }
tracing = "0.1.40"
tor-hsservice = { version = "^0.25", optional = true }
tor-cell = { version = "^0.25", optional = true }
tor-proto = { version = "^0.25", optional = true }
data-encoding = { version = "2.6.0" }

[dev-dependencies]
libp2p = { version = "0.53", default-features = false, features = ["tokio", "noise", "yamux", "ping", "macros", "tcp", "tls"] }
tokio-test = "0.4.4"
tokio = { version = "1.41.1", features = ["macros"] }
tracing-subscriber = "0.2"

[features]
listen-onion-service = [
    "arti-client/onion-service-service",
    "dep:tor-hsservice",
    "dep:tor-cell",
    "dep:tor-proto"
]

[[example]]
name = "ping-onion"
required-features = ["listen-onion-service"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
